Update #214: Make play/pause icon pop -- fix flex spacing

--- a/theme/musicco.css
+++ b/theme/musicco.css
@@ -406,7 +406,7 @@
 		display: flex;
 		flex-direction: column;
 		height: 20vh;
-		justify-content: center;
+		justify-content: space-evenly;
 	}
 
 	#playlist_select {
